--- a/Template/Template/Template.csproj
+++ b/Template/Template/Template.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Fiender.cs" />
     <Compile Include="Game1.cs" />
+    <Compile Include="Kula.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Spelare.cs" />
